@@ -9,6 +9,7 @@
     <artifactId>example</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <developers>
         <developer>
             <name>Kul'baka Alex</name>
@@ -20,6 +21,7 @@
             </roles>
         </developer>
     </developers>
+
     <description>code example project</description>
     <url>todo: add ref on git</url>
 
@@ -30,21 +32,28 @@
         <module>presentation</module>
         <module>admin</module>
         <module>rest</module>
+        <module>manager</module>
     </modules>
 
     <properties>
+        <!--values-->
         <java.version>11</java.version>
+        <embedded.tomcat7.maven.plugin.PORT>9999</embedded.tomcat7.maven.plugin.PORT>
+        <embedded.tomcat7.maven.plugin.PATH>/example</embedded.tomcat7.maven.plugin.PATH>
+        <uberjar.name>uberjar</uberjar.name>
+        <!--plugins-->
+        <embedded.tomcat7.maven.plugin.version>2.2</embedded.tomcat7.maven.plugin.version>
+        <embedded.jetty.maven.plugin.version>9.4.14.v20181114</embedded.jetty.maven.plugin.version>
+        <primefaces.maven.jsf.plugin.version>1.3.2</primefaces.maven.jsf.plugin.version>
+        <!--<maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>-->
+        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+        <maven.build.war.plugin.version>2.6</maven.build.war.plugin.version>
+        <!--dependencies-->
         <junit.version>4.12</junit.version>
         <jersey.version>2.28</jersey.version>
         <google.guava.version>23.0</google.guava.version>
-        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
         <checker.framework.version>2.3.2</checker.framework.version>
         <jax.rs.version>2.1</jax.rs.version>
-        <maven.build.war.plugin.version>2.6</maven.build.war.plugin.version>
-        <embedded.tomcat7.maven.plugin.version>2.2</embedded.tomcat7.maven.plugin.version>
-        <embedded.tomcat7.maven.plugin.PORT>9999</embedded.tomcat7.maven.plugin.PORT>
-        <embedded.tomcat7.maven.plugin.PATH>/example</embedded.tomcat7.maven.plugin.PATH>
-        <embedded.jetty.maven.plugin.version>9.4.14.v20181114</embedded.jetty.maven.plugin.version>
         <log4j.version>2.11.1</log4j.version>
         <slf4j.version>1.7.25</slf4j.version>
         <apache.commons.lang3.version>3.8.1</apache.commons.lang3.version>
@@ -52,7 +61,6 @@
         <powermock-module-junit4.version>2.0.0</powermock-module-junit4.version>
         <jmockit.version>1.21</jmockit.version>
         <hibernate.version>5.4.1.Final</hibernate.version>
-        <reflections.version>0.9.11</reflections.version>
         <apache.derby.version>10.14.2.0</apache.derby.version>
         <hsqldb.version>2.4.0</hsqldb.version>
         <h2.version>1.4.197</h2.version>
@@ -65,7 +73,30 @@
         <swagger.jerset2.version>1.5.22</swagger.jerset2.version>
         <jersey.guava.version>2.25.1</jersey.guava.version>
         <apache-shiro.version>1.4.0</apache-shiro.version>
+        <commons.logging.version>1.2</commons.logging.version>
+        <byte.buddy.version>1.9.10</byte.buddy.version>
+        <commons.beanutils.version>1.9.3</commons.beanutils.version>
+        <mockito.core.version>2.7.19</mockito.core.version>
+        <primefaces.themes.bootstrap.version>1.0.10</primefaces.themes.bootstrap.version>
+        <jboss.weld.servlet.version>2.2.14.Final</jboss.weld.servlet.version>
+        <jboss.jandex.version>2.0.0.Final</jboss.jandex.version>
+        <javax.enterprise.cdi.api.version>1.2</javax.enterprise.cdi.api.version>
+        <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
+        <org.primefaces.version>6.2</org.primefaces.version>
+        <glassfish.javax.faces.version>2.3.3</glassfish.javax.faces.version>
+        <javax.inject.version>1</javax.inject.version>
+        <jakarta.annotation.api.version>1.3.4</jakarta.annotation.api.version>
         <jmh.version>1.19</jmh.version>
+        <javax.el.version>3.0.1-b08</javax.el.version>
+        <classpath.scanner.version>2.9.3</classpath.scanner.version>
+        <project.lombok.version>1.18.6</project.lombok.version>
+        <powermock.api.mockito.version>1.7.0RC4</powermock.api.mockito.version>
+        <mysql.connector.version>8.0.15</mysql.connector.version>
+        <!--classpath scanners-->
+        <reflections.version>0.9.11</reflections.version>
+        <corn.classpath.scanner.version>1.1.10</corn.classpath.scanner.version>
+        <eu.infomas.annotation.detector.version>3.0.5</eu.infomas.annotation.detector.version>
+        <io.github.classpathgraph.version>4.8.25</io.github.classpathgraph.version>
     </properties>
 
     <dependencies>
@@ -80,6 +111,12 @@
             <artifactId>jmh-generator-annprocess</artifactId>
             <version>${jmh.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <!--classpath Scanner-->
+        <dependency>
+            <groupId>io.github.lukehutch</groupId>
+            <artifactId>fast-classpath-scanner</artifactId>
+            <version>${classpath.scanner.version}</version>
         </dependency>
         <!--logging-->
         <dependency>
@@ -133,7 +170,7 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
-            <version>1.7.0RC4</version>
+            <version>${powermock.api.mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.jmockit/jmockit -->
@@ -143,7 +180,6 @@
             <version>${jmockit.version}</version>
             <scope>test</scope>
         </dependency>
-
 
         <!--useful library,like argument validation-->
         <dependency>
@@ -169,9 +205,8 @@
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.2</version>
+            <version>${commons.logging.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
@@ -180,13 +215,13 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.el</artifactId>
-            <version>3.0.1-b08</version>
+            <version>${javax.el.version}</version>
         </dependency>
         <!--Lombok project-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.6</version>
+            <version>${project.lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -194,6 +229,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
@@ -202,6 +238,17 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+
+            <!--jmokit.version 1 exception resolver-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>${maven.surefire.plugin.version}</version>-->
+                <!--<configuration>-->
+                    <!--<argLine>-Djdk.attach.allowAttachSelf=true</argLine>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
         </plugins>
     </build>
 
